recursividad/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_111\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Cristian Choque\Desktop\JTattoo-1.6.11.jar;C:\Users\Cristian Choque\Desktop\JTattooDemo.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Cristian Choque\Desktop\recursividad
-d
C:\Users\Cristian Choque\Desktop\recursividad\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Cristian Choque\Desktop\recursividad\registroPais.java
<---- end of javadoc command ---->
Loading source file C:\Users\Cristian Choque\Desktop\recursividad\registroPais.java...
C:\Users\Cristian Choque\Desktop\recursividad\registroPais.java:5: error: <identifier> expected
    ArrayList<registro>=new ArrayList<registro>();
                       ^
1 error
